--- a/Appendix/Languages.tex
+++ b/Appendix/Languages.tex
@@ -317,6 +317,11 @@ Spoke in \hr{Saphyrae}{\Saphyrae}.
 \index{Talaac}
 The language spoken by most \dragons and many \ophidians. 
 
+Talaazu was a geographical region spanning many caisith kingdoms and city-states, mostly dominated by caisith of Talaac ethnicity. 
+
+The Talaac were a Caisith ethnic group that spoke variants of the Talaac language and shared many cultural traits. 
+
+
 
 
 \meta{%
