--- a/Characters/OphidianCharacters.tex
+++ b/Characters/OphidianCharacters.tex
@@ -594,6 +594,15 @@ He was one of the first \ophidians born to a pair of \dragons.
 
 
 
+\subsubsection{Friendship with \Nexagglachel}
+Irocas was at first a hanger-on. He was a study buddy of \Quessanth and \Raemyth during their studies of sorcery, and they benefitted greatly from their friendship with the bookish and gifted Irocas. Irocas himself was extremely ambitious as a scholar and sorcerer\dash{}he craved knowledge. 
+Curiosity, \hr{Irocas Exaltation}{he actually mellowed out after his draconian exaltation}.
+
+
+
+
+
+
 \subsubsection{Seeking Gnosis}
 \target{Secherdamon seeks Gnosis}
 Already in his youth, before the \secondbanewar, \Secherdamon{} was a scientist who sought for Gnosis. 
@@ -610,6 +619,15 @@ He had \emph{earned} that Gnosis much more than \Ishnaruchaefir{} had.
 That was one of the reasons why he hated \Ishnaruchaefir{} so much. 
 
 Later he finally \hr{Secherdamon gains Gnosis}{gained the Gnosis he sought}. 
+
+
+
+
+
+\subsubsection{Exaltation}
+\target{Irocas Exaltation}
+Curiosity, he actually mellowed out after his draconian exaltation and began to devote himself to the arts instead of being so obsessed with the sciences and his personal greatness. 
+
 
 
 
@@ -1006,6 +1024,26 @@ When \Nechsain{} fights, the seven scorpions swarm around him and fight for him.
 
 
 
+\section{Ixaeor Anakeron}
+\target{Ixaeor}
+\target{Anakeron}
+Ixaeor Anakeron, a female \dragon, was a military commander. She was a friend of \Nexagglachel and \Iscrafel.
+
+She fell during the Incursion War.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 \section[Laccashyth]{\Laccashyth}
 A female \dragon. 
 
@@ -1227,6 +1265,7 @@ In the olden days of the \draconian{} empire, \Nexagglachel was the leader of ma
 
 \Quessanth fought for his brother as a champion.
 He was a martial artist and warrior-mage who hungered for glory and recognition. 
+\Quessanth was nearly the reigning martial arts champion of the world. Only \hs{Zanshir} and \hs{Theraster} he considered his superiors. Zanshir was killed before Quessanth ever bested her. Theraster he only managed to defeat a few times in training matches. 
 
 Young \Quessanth was a smith and weaponmaker as a warrior. 
 In his free time, for fun he also studied the art of cooking and confectionery. 
@@ -2481,6 +2520,28 @@ When he awoke, he used \Nithdornazsh as his citadel.
 
 
 
+\subsubsection{Ambition like a dark lord}
+\Nexaggrael had great ambitions even from a young age. He believed he could build a better world, and for that he needed to rule. 
+
+Young \Raemyth was something of an aspiring dark lord\dash{}but the noble kind. He saw a world horribly flawed and full of suffering, and he wanted to fix it. He believed that the ends justified the means. He wanted to rule and make the world a better place. 
+
+
+
+
+
+
+\subsubsection{Friendship with \Quessanth and others}
+\Quessanth and \hs{Ixaeor} believed him. 
+\Quessanth was also eager to serve as his champion and win glory and mastery as a martial artist. 
+
+Irocas was at first a hanger-on. 
+
+
+
+
+
+
+
 \subsubsection{Almost rebuilt the \draconian{} civilization}
 \Secherdamon{} and \Ishnaruchaefir{} believe that the \draconian{} people were well on their way to rebuilding all the glory they had lost in the \firstbanewar. 
 \hr{Nexagglachel could not rebuild Ophidian civilization}{It was difficult, but they were making progress}. 
@@ -3149,7 +3210,16 @@ Later the tomb was used to construct the \hs{Ark}.
 
 
 
-\subsubsection{Youth}
+\subsubsection{Youthly piety}
+\target{Valcan stuck to the Epitomes}
+Young Valcan was law-abiding and stuck with the \hs{Epitomes}. Even then he was a prodigy and achieved incredible feats and innovations. Many were horrified when the genius Valcan began consorting with the Outer Darkness. 
+
+
+
+
+
+
+\subsubsection{Youthly rebellion}
 \Sethicus underwent some horribly disturbing revelations in his youth.
 They led him on a path of mysticism.
 He began to romance with the \xss more and more. 
@@ -4360,6 +4430,51 @@ She is actually a \dragon or \nagalord.
 In her true form, \Sarokash is a giant \nagalord. 
 She often takes the form of a \scatha. 
 In all forms, her scales are glittering emerald green. 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+\section{Theraster}
+\target{Theraster}
+Theraster was a male \caisith martial artist. 
+He was a mentor of \Quessanth and one of the few whom \Quessanth considered his superiors in the martial arts. 
+\Quessanth thinks he only surpassed Theraster in the last few years before his Exaltation.
+
+Theraster never became Exalted.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+\section{Zanshir}
+\target{Zanshir}
+Zanshir was a female \caisith martial artist. 
+She was one of the few whom \Quessanth considered his superiors in the martial arts, before her death. 
+She died before \Quessanth felt he had surpassed her\dash indeed, Quessanth believed he only surpassed her after his Exaltation.
+
+She never became Exalted.
+
 
 
 
