--- a/Commands.tex
+++ b/Commands.tex
@@ -4122,6 +4122,7 @@
 \newcommand{\NexagglachelsCurse}          {\ps{\Nexagglachel} Curse\xspace}
 
 % Nexagglacheldraex, a Dragonlord, the eldest son of \KhothSell.
+\newcommand{\Nexaggrael}                  {Nexaggrael\xspace}
 \newcommand{\Nexagglachel}                {Nexaggrael\xspace}
 \newcommand{\RaemythKhivaashNexagglachel} {\Raemyth \Khivaash \Nexagglachel}
 \newcommand{\RaemythNexagglachel}         {\Raemyth \Nexagglachel}
