--- a/Story/OphidianCivilization.tex
+++ b/Story/OphidianCivilization.tex
@@ -616,6 +616,29 @@ They also \hr{Ophidians create Nephilim}{created the \nephilim as slaves}.
 
 
 
+\subsubsection{Zoarchs of Oshurae}
+\target{Oshur}
+\target{Oshurae}
+\target{Zoarch}
+\target{Zoarchs}
+The mighty Zoarchs of Oshurae dominated much of the \caisith world. They splintered into factions and warred against one another. Eventually their hegemony was broken and they declined, some centuries before the birth of Sethicus and Nexaggrael. Much Oshur architecture still existed, including many of the important palaces, fortresses and temples in the richer cities. 
+
+\target{Zoarch dress}
+The Zoarchs traditionally wore short buttoned coats similar to Chinese tangzhuang, always with a metallic edge (often black and silver). 
+
+
+
+
+\subsubsection{Nom and Golem}
+The kingdoms of Nom and Golem emulated Oshur culture and could be considered the heirs and successors of Oshurae. 
+
+The nobility of Nom and Golem emulated the \hr{Zoarch dress}{traditional dress of the Zoarchs}. 
+
+
+
+
+
+
 
 \subsubsection{\Ophidian subraces}
 \target{Enslaved Ophidian subraces}
