--- a/World/DenizensMinor.tex
+++ b/World/DenizensMinor.tex
@@ -1114,6 +1114,23 @@ In later ages, when they were rare, the \aryothim were still remembered in legen
 
 
 
+\subsection{Name}
+Possibly: 
+
+\begin{itemize}
+  \item Aryon.
+  \item Oryon.
+  \item Urgon.
+\end{itemize}
+
+
+
+
+
+
+
+
+
 
 \subsection{Physique}
 They looked like \nephilim, but bigger and stronger. 
