--- a/World/OphidianRaces.tex
+++ b/World/OphidianRaces.tex
@@ -1931,7 +1931,13 @@ After death they were still idolized, and all this psychic energy flowing from \
 
 Some Epitomes are considered "higher" than others. This is highly subjective and contentions, based on one's personal belief of what the highest ideals of Zotha and Asheen are. 
 
-Most ancient caisith drew upon the Epitomes for their sorcery. Epitomes are power vessels created by the caisith nexuses. Caisith tribes and kingdoms will subconsciously invest their belief and faith into intangible ideals which gradually coalesce into semi-living vertices. (Compare them to the Chaos Gods from Warhammer and Warhammer 40,000.) These become Epitomes. They later become worshipped as holy things or gods. Many Epitomes are venerated in personified form; some are even named after and identified with individual caisith, dead or even living. A mysteriarch or other caisith leader who is identified with an Epitome can wield much of the Epitome’s power. 
+Most ancient caisith drew upon the Epitomes for their sorcery. Epitomes are power vessels created by the caisith nexuses. Caisith tribes and kingdoms will subconsciously invest their belief and faith into intangible ideals which gradually coalesce into semi-living vertices. (Compare them to the Chaos Gods from \emph{Warhammer} and \emph{Warhammer 40,000}.) These become Epitomes. They later become worshipped as holy things or gods. Many Epitomes are venerated in personified form; some are even named after and identified with individual caisith, dead or even living. A mysteriarch or other caisith leader who is identified with an Epitome can wield much of the Epitome’s power. 
+
+Some outlaw mages drew upon the Outer Darkness - an umbrella term for a variety of alien powers, most notably the \xzaishanns. 
+
+Young Valcan was \hr{Valcan stuck to the Epitomes}{law-abiding and stuck with the Epitomes}. Later he changed.
+
+
 
 
 
@@ -2069,6 +2075,21 @@ The \quiljaaran \hr{QJ morphing}{changed shape} to some extent, and they wanted 
 \target{Uzul-Kaya}
 The \UzulKaya were an order of mystics among the \ophidians that conducted research into the Aenigmata of the \xss. 
 They left behind a shrine in the city beneath \Yormis (later simply called the Shrine of the \UzulKaya). 
+
+
+
+
+
+\subsubsection{Zotha and Asheen}
+\target{Zotha}%
+\target{Asheen}%
+Some believe that Zotha is a force of destruction. That is a misconception. Zotha is a force of creation; destruction is a mere side effect. Asheen is a force of preservation. 
+
+Zeethan Kraal says to Carzain Shachar: 
+\quo{I have seen at least two texts written by humans that explain Asheen as ``feminine'' and Zotha as ``masculine''. I do not know enough about human philosophies to vouch for or against the accuracy of this translation. Judge it for yourself.}
+
+Some equate Asheen with \Iquin and Zotha with \Itzach. This is definitely wrong. \Iquin is one particular dweomer, unrelated to Asheen, while \Itzach is a much more nebulous term - comparable to the \caisith concept of the Outer Darkness. 
+
 
 
 
