--- a/World/Realms.tex
+++ b/World/Realms.tex
@@ -1577,6 +1577,45 @@ In most places the Upper Halls were the top levels of the towers, but there were
 
 
 
+\subsection{Holds}
+
+
+
+
+
+\begin{gloss}
+
+
+
+  \gitem{\Cathedon}
+  \target{Cathedon}
+  The capital hold of \hr{Merkyrah}{\Merkyrah}, and later of \CiriathSepher. 
+  It lay near \Hyardes. 
+
+
+
+  \gitem[Hyardes]{\Hyardes}
+  Once the capital hold of \hr{Tarcharos}{\Tarcharos}; later a haunted necropolis.
+  It was known to all \resphain that the \resphan race had originated in \Tarcharos, although the exact tower was unknown. 
+  (It was really \hr{Jazerubel}{\Jazerubel}.)
+
+
+
+  \gitem{\Surammas}
+  \target{Surammas}
+  The capital hold of \Mystraacht. 
+
+
+
+\end{gloss}
+
+
+
+
+
+
+
+
 
 \subsection{Illumination}
 The \resphan{} safe zone is lit mostly by the flashes of lightning from \hr{Thunder in Nyx}{the thunderclouds far below}. 
@@ -1772,38 +1811,12 @@ The black stars are mentioned in \emph{\hr{Wanderers in Darkness}{\WanderersInDa
 
 
 
+\subsection{Statues of caterpillars and wormsirens}
+\Nyx is full of statues of vast caterpillar-like monsters. It is believed that they are likenesses of the extinct founders and builders of \Nyx, called the Ancient Nyxians. 
 
-\subsection{Holds}
-
-
-
-
-
-\begin{gloss}
+It is suspected by some that the wormsirens are degenerate descendants of the caterpillar-like Ancient Nyxians. 
 
 
-
-  \gitem{\Cathedon}
-  \target{Cathedon}
-  The capital hold of \hr{Merkyrah}{\Merkyrah}, and later of \CiriathSepher. 
-  It lay near \Hyardes. 
-
-
-
-  \gitem[Hyardes]{\Hyardes}
-  Once the capital hold of \hr{Tarcharos}{\Tarcharos}; later a haunted necropolis.
-  It was known to all \resphain that the \resphan race had originated in \Tarcharos, although the exact tower was unknown. 
-  (It was really \hr{Jazerubel}{\Jazerubel}.)
-
-
-
-  \gitem{\Surammas}
-  \target{Surammas}
-  The capital hold of \Mystraacht. 
-
-
-
-\end{gloss}
 
 
 
