--- a/Appendix/Languages.tex
+++ b/Appendix/Languages.tex
@@ -188,6 +188,17 @@ Rissitic \hs{glyphs} resemble Egyptian hieroglyphs.
 
 
 
+\subsection{Hija}
+\target{Hija}
+The ancient \caisith language from which we derive the names \hs{Insharrad} and \hs{Jach-dun} was Hija. It is meant to resemble Arabic. 
+
+
+
+
+
+
+
+
 \subsection{Imetric}
 \target{Imetric language}
 The language of the Imetrium. 
@@ -320,6 +331,16 @@ The language spoken by most \dragons and many \ophidians.
 Talaazu was a geographical region spanning many caisith kingdoms and city-states, mostly dominated by caisith of Talaac ethnicity. 
 
 The Talaac were a Caisith ethnic group that spoke variants of the Talaac language and shared many cultural traits. 
+
+Example of Talaax words: 
+
+\begin{itemize}
+    \item 
+        \quo{Gýthnor drum boznaládro shínyadla gutsumryán blagglásshu drum konnúr.}
+    \item 
+        \quo{Zera kun tabash ola huuthum!} 
+        A Talaac spell for quickly raising a shield to ward off bullets, fire and other ranged weapons. 
+\end{itemize}
 
 
 
