--- a/Characters/OphidianCharacters.tex
+++ b/Characters/OphidianCharacters.tex
@@ -709,7 +709,11 @@ Finally, \hr{Vizsherioch becomes the Dagger}{\Vizsherioch{} became the Dagger}.
 
 
 \subsection{Names}
-\Secherdamon's full name was \Irocas \Veldraxx \Nexagglachel \Secherdamon. 
+\Secherdamon's full name was Psitakkion \Irocas \Veldraxx \Nexagglachel \Secherdamon. 
+
+\emph{Psitakkion} was the name of his \hs{brood}.
+
+\emph{Irocas} means \quo{dazzling light} in his native \Saphyr language. 
 
 He \hr{Secherdamon takes the name Nexagglachel}{took the name \quo{\Nexagglachel}} (after his brother \hr{Nexagglachel}{\RaemythNexagglachel}, whom he admired). 
 
@@ -1736,19 +1740,25 @@ The \quo{third option} of enlightenment that \Sethicus had sought turned out to 
 
 \subsection{Names, titles and reputation}
 \target{Ishnaruchaefir's names}
-\Ishnaruchaefir's full name was \Quessanth \Melechet \Nierzshah \Tzeorossh \Ishnaruchaefir.
+\Ishnaruchaefir's full name was Belraphon \Quessanth \Melechet \Nierzshah \Tzeorossh \Ishnaruchaefir.
 
 \begin{itemize}
+  \item
+    \emph{Belraphon} was the name of his brood, of the Tiras nation of \Saphyr.
+  \item
+    \emph{\Quessanth} means \quo{striving for perfection} in the language of Tiras (his mother-tongue, of the \Saphyr language group).
   \item 
-    \quo{\Nierzshah} means \quo{\hs{Destroyer}}.
+    \emph{\Nierzshah} means \quo{\hs{Destroyer}} in Mystic Talaac.
     He \hr{Ishnaruchaefir takes the name Nierzshah}{took this name during the \secondbanewar}. 
   \item 
-    \quo{\Tzeorossh} means \quo{\hs{Exile}}.
+    \emph{\Tzeorossh} means \quo{\hs{Exile}} in Mystic Talaac.
     
     He \hr{Ishnaruchaefir takes the name Tzeorossh}{took this name after the \Shrouding}. 
     The title of \quo{\hs{Exile}} was originally given to him by \Secherdamon in hatred.
     
     When he, once in a while, introduced himself with his full name, he would make a sarcastic grimace when he said \quo{\Tzeorossh}.
+  \item 
+    \quo{\Iscrafel} means \quo{Juggernaut} in Mystic Talaac. More literally, \quo{the one who survives and keeps moving forward in face of any and all opposition}.
 \end{itemize}
 
 \target{Ishnaruchaefir's titles}
@@ -2650,6 +2660,12 @@ But he still lived on in the form of a hidden ally: The Curse.
 
 
 \subsection{Names and reputation}
+His name was Tessephon \RaemythKhivaashNexagglachel.
+
+\emph{Tessephon} was the name of this \hs{brood}.
+
+\emph{Raemyth} means \quo{protector} or \quo{protector of Asheen} in his native \Saphyr language.
+
 \target{Nexagglachel is a powerful name}
 \quo{\Nexagglachel} was a very powerful name. 
 The Sentinels who founded \Ortaican myth wanted to \hr{Ortaicans use Nexagglachel's name}{milk it for everything it was worth}. 
@@ -2661,6 +2677,12 @@ Later, \Secherdamon even \hr{Secherdamon takes the name Nexagglachel}{took the n
 
 \subsubsection{\Mezzagrael}
 In \hr{Ortaican mythology}{\Ortaican mythology}, \Nexagglachel was known under the name \quo{\hr{Mezzagrael}{\Mezzagrael}}. 
+
+
+
+
+\subsubsection{Title}
+Nexaggrael was by some given the \hs{Mystic Talaac} title of \emph{dzraicchen-yagsh-tierxul}. Variously translated as “exalted sovereign”, “exalted overlord”, “supreme exalted one” or merely “Dragon King”. 
 
 
 
@@ -2941,6 +2963,8 @@ Her father was \hr{Hesod-Nerga}{\HesodNerga}.
 
 
 \subsection{Name}
+Her name was Talaac, for she was of Talaac ethnicity.
+
 Her taken name \quo{\Kserasshana} means \quo{\xs-like}. 
 She took it after she became the founder of the \dzraicchenosses. 
 
@@ -2952,6 +2976,13 @@ She founded the tradition of \hr{Draconic names}{\quo{taken names}}, which the \
 
 
 \subsection{History}
+
+
+
+
+
+\subsubsection{Talaac}
+She was of Talaac ethnicity.
 
 
 
@@ -3302,6 +3333,15 @@ But few suspected the truth, and those who did went insane still-living could no
 
 
 
+
+\subsubsection{Legacy}
+\Sethicus was very controversial in his lifetime. Some condemned him as a black sorcerer meddling with forbidden \xzaishannic powers. But after his death he was \hr{Epitome}{Epitomized} as one of the ultimate manifestations of \hs{Zotha}. 
+
+
+
+
+
+
 \subsubsection{Mythical archetype}
 \target{Sethicus as archetype}
 In \draconian metaphysics, \Sethicus had a status as a mythical primogenitor. 
@@ -3326,7 +3366,11 @@ Compare to Adam Kadmon in \Cabbalist theory (whose body contains the ten \sephir
 
 
 \subsection{Name}
-His original name was \quo{Valcan of Tan-Izul}. 
+His original name was Tanizul Valcan. 
+
+\emph{Tanizul} was the name of his \hs{brood}.
+
+\emph{Valcan} was originally the name of a species of large pterodactyl in his native \Saphyr language. It existed at the time of his birth and since went extinct. 
 
 When he became a \dragon, he took the name \emph{\Sethicus}. 
 
@@ -4417,6 +4461,18 @@ Eventually \hr{Sethicus kills Ramarxes}{\Sethicus slew him}.
 \Sarokash is the chief god of the Imetric Tribunal and the ruler of the Imetrium. 
 She is actually a \dragon or \nagalord. 
 \also{Imetrium, Tribunal}
+
+
+
+
+
+
+
+
+
+\subsection{Name}
+Her given name was Ithrix.
+It is of Talaac origin.
 
 
 
