--- a/Commands.tex
+++ b/Commands.tex
@@ -1173,8 +1173,10 @@
 \newcommand{\Durcaccontinent} {\DurcacContinent}
 
 % Durcac, homeland of the Rissitics
-\newcommand{\Durcac}          {Drucar\xspace}
-\newcommand{\Durcaci}         {Drucari\xspace}
+\newcommand{\Durcac}          {Drukar\xspace}
+\newcommand{\Durcaci}         {Drukari\xspace}
+\newcommand{\Drukar}          {Drukar\xspace}
+\newcommand{\Drukari}         {Drukari\xspace}
 
 
 
@@ -3141,6 +3143,10 @@
 \newcommand{\TrueOphidians}    {\TrueOphidian{}s}
 \newcommand{\trueophidian}     {\TrueOphidian}
 \newcommand{\trueophidians}    {\TrueOphidians}
+\newcommand{\Suchian}          {Suchian\xspace}
+\newcommand{\Suchians}         {Suchians\xspace}
+\newcommand{\suchian}          {Suchian\xspace}
+\newcommand{\suchians}         {Suchians\xspace}
 
 % Caisith, another name for the Ophidians.
 \newcommand{\Caisith}          {Caisith\xspace}
