--- a/Story/OphidianCivilization.tex
+++ b/Story/OphidianCivilization.tex
@@ -630,7 +630,7 @@ The Zoarchs traditionally wore short buttoned coats similar to Chinese tangzhuan
 
 
 \subsubsection{Nom and Golem}
-The kingdoms of Nom and Golem emulated Oshur culture and could be considered the heirs and successors of Oshurae. 
+The kingdoms of \hr{Nom}{\Nom} and Golem emulated Oshur culture and could be considered the heirs and successors of Oshurae. 
 
 The nobility of Nom and Golem emulated the \hr{Zoarch dress}{traditional dress of the Zoarchs}. 
 
