--- a/World/DenizensMinor.tex
+++ b/World/DenizensMinor.tex
@@ -3721,6 +3721,23 @@ Compare to the Hounds of Tindalos from a Cthulhu story by\ldots{} Frank Belknap 
 
 
 
+\section{Wormsirens}
+\target{Wormsiren}
+\target{Wormsirens}
+\target{wormsiren}
+\target{wormsirens}
+The wormsirens are the original inhabitants of Nyx. Many statues of them attest to this. It is unknown how they fell to their current state. 
+
+Perhaps the wormsirens still rule the lower levels, and the ones encountered in the habitable levels are outcasts from their monstrous civilization. 
+
+
+
+
+
+
+
+
+
 
 
 
