--- a/World/Magic.tex
+++ b/World/Magic.tex
@@ -1040,6 +1040,72 @@ Just \hr{Visualizing Archons}{like the \Archons}, the various \hr{Daemon}{\daemo
 
 
 
+\section{Caisith magic}
+\target{Caisith magic}
+\target{QJ magic}
+\Caisith magic was based on occult logic and philosophy, originally learned from some cosmic gods. 
+Or perhaps from the \voyagers. 
+
+\hs{Imetric magic} was very much inspired by the \caisith and \quiljaaran traditions.
+
+
+
+
+
+
+
+
+
+\subsection{Disciplines/schools/techniques}
+There were a number of magical disciplines:
+
+\begin{itemize}
+    \item The senses - the most basic. 
+    \item The mind - extremely important. 
+    \item The body - basic. 
+    \item Matter. 
+    \item Energy.
+    \item Space - advanced. 
+    \item Life - advanced. 
+\end{itemize}
+
+
+
+
+
+
+
+
+
+\subsection{Founts}
+\target{Fount}
+\target{Founts}
+\target{fount}
+\target{founts}
+To use/cast magic, a mage needs energy. The energy can come from the mage's own body and mind, or from a god with whom you have a pact, or it can be stored in items, or stolen from unwilling victims. It can also be given freely by allies. 
+
+Some people are professional mage supporters, called \emph{founts}. They train their bodies and minds to produce lots of energy. They practice meditation techniques and bond with a mage or a few mages to ease the process of energy transfer and minimize energy loss. They then follow the mage and provide energy when needed. 
+
+Supporters may also double as menial servants, bodyguards or even apprentice mages. 
+
+A supporter can be drained to death, but only if he is willing. This gives a huge energy boost. 
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 \section{Chaos magic}
 \target{Chaos magic}
 
@@ -1370,6 +1436,75 @@ Wraithworms were \daemons that took on the semblance of a skeletal snake.
 They were short-lived; they attacked once or a few times and then dissipated. 
 
 Compare to the spell \quo{Bone Spirit} in the game \cite{VideoGame:DiabloII}. 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+\section{Labyrinth}
+\target{Labyrinth}
+The “Labyrinth of Thoughts” or the “Labyrinth of the Mind” is a kind of parallel dimension, a mental world, a dreamworld. Every living being exists simultaneously in the Labyrinth and in the physical world. The mind can move through the Labyrinth while the body moves through the physical world. There is no direct geographical connection between the two planes; a person’s location in the world does not affect his “location” in the Labyrinth and vice versa. 
+
+Most people are unaware of the Labyrinth when awake, but may glimpse it in dreams. Mages and mystics must train themselves to become aware of the Labyrinth, to consciously perceive it and deliberately navigate it. Even so, this takes effort, so even mages will remain mostly unaware of the Labyrinth most of the time. A mage must make a conscious effort to “enter” the Labyrinth or “awaken into” the Labyrinth in order to begin to move deliberately through it.
+
+All parts of the Labyrinth look dark, dead, dreary and colourless. This is a consequence of the Shrouding (the Suffocation). Before the Suffocation, the Labyrinth looked much brighter and more alive - albeit still very mysterious and dangerous.
+
+
+
+
+
+
+
+
+
+\subsection{Anchors/homes in the Labyrinth}
+Every person has a “home” or “anchor” in the Labyrinth: a location that they will unconsciously gravitate towards and return to unless they consciously move elsewhere. When you enter the Labyrinth, you will usually find yourself near your anchor. The anchor depends on your race and your alignment. 
+
+Most humans dwelling in Ishar/Miith are anchored in a barren valley of great rocks. 
+Most scathae are anchored in an eerily silent nocturnal forest or jungle.
+Most caisith and dragons are anchored in a great ruined city of endless cemeteries and decaying monuments.
+Most resphain are anchored in a twisting world of giant rocks floating in an empty void.
+
+
+
+
+
+
+
+
+
+\subsection{Denizens}
+
+
+
+
+
+\subsubsection{Dread Wyrms}
+\target{Dread Wyrm}
+\target{Dread Wyrms}
+The Dread Wyrms are colossal monsters that dwell in the Labyrinth. They appear as great, vaguely defined reptilian things with long bodies and great jaws. The caisith believe that they are associated with snakes - they may be the Labyrinthine manifestations of the greatest and mightiest of snakes. They are a kind of Epitomes. The Wyrms are terribly dangerous, but can also provide power if propitiated. 
+
+The Wyrms were the inspiration behind dragons. The earliest dragons reshaped themselves into greater bodies patterned after the Dread Wyrms and drawing upon the example of their power. 
+
+See also the section about \hs{Wyrms}.
+
+
+
+
+
+\subsubsection{Monsters in the Labyrinth}
+There are monsters to encounter in the Labyrinth. It is unknown whether these monsters exist solely in the Labyrinth or whether they have bodies in some unknown place, or whether they are the unrecognizable Labyrinthine manifestations of known but unidentifiable creatures.
+
 
 
 
@@ -1924,12 +2059,7 @@ Schools of magic on \Miith{} include:
   
   \begin{comment}\paragraph{\QuilJaaran magic}\end{comment}
   \gitem{\QuilJaaran{} magic}
-  \target{QJ magic}
-  \QuilJaaran{} magic was based on occult logic and philosophy, originally learned from some cosmic gods. 
-  Or perhaps from the \voyagers. 
-  
-  \hs{Imetric magic} was very much inspired by the \quiljaaran{} tradition.
-  
+  See the section on \hr{Caisith magic}{\caisith magic}.
   
   
   
@@ -1989,7 +2119,7 @@ Schools of magic on \Miith{} include:
     The theory of \hr{Iquin}{\iquin} and \hr{Itzach}{\itzach}.
  
 \end{gloss}
- 
+
 
 
 
