--- a/World/OphidianRaces.tex
+++ b/World/OphidianRaces.tex
@@ -1817,18 +1817,15 @@ The madness and dementia are irreversible.
 
 
 
-\subsection{Name}
-\target{Names for Ophidians}
-Their own name for themselves is \caisith (the name is both singular and plural). 
-\quo{\Ophidian} is a name given to them by the mammalian races because of how they emulate snakes. 
-Other names are Serpentines, Serpentine People, Serpent Folk or Serpent Men. 
+\subsection{Broods}
+\target{Brood}
+\target{Broods}
+\target{brood}
+\target{broods}
+The \caisith practiced communal brood care. They live in groups called broods. Each child is raised by the brood as a whole, and parentage is considered less important. 
 
+The \hs{Talaac} have a tradition of rather large broods of 400-600 individuals (largely endogamous). The \hr{Saphyr}{\Saphyr} have smaller broods of 50-100 (largely exogamous). Broods congregate into nations. Nations are often led by a Mysteriarch. 
 
-
-
-
-\subsubsection{\QuilJaar}
-Singular \emph{\quiljaar{}}, plural \emph{\quiljaaran{}}, adjective \emph{\quiljaaran{}}. 
 
 
 
@@ -1943,14 +1940,16 @@ Young Valcan was \hr{Valcan stuck to the Epitomes}{law-abiding and stuck with th
 
 \begin{itemize}
     \item 
+        \target{Insharrad}
         One of the most important Epitomes is Insharrad, aka Nezred, representing the glory and greatness of the Caisith race. She was the legendary leader of the ancient (highly fictionalized) Caisith uprising against the Phaetonians. 
     \item Sekesra or Segesra is the Epitome of honourable warfare - chivalry, if you will. 
     \item
+        \target{Jach-dun}
         Jach-dun or Zagatuna is a male Epitome of warding off and vanquishing foreign foes (i.e., non-Caisith intelligent beings). His name is often invoked as an exclamation of shock. He is often called upon in war against non-Caisith foes.
         
         He is from the same mythological period as Insharrad. Some sages suspect that Jach-dun was originally the same historical person as Insharrad.
         
-        Jach-dun is the original Hija form of his name, or close to it. Zagatuna is a Talaac variant. 
+        Jach-dun is the original \hs{Hija} form of his name, or close to it. Zagatuna is a Talaac variant. 
 
     \item 
         The Concord of the Caisith is guarded and upheld by three female Epitomes named Kelesh, Suthalba and Tsor. 
@@ -2187,6 +2186,27 @@ They still had the power of \hr{Ophidian hypnotism}{hypnotism}.
 
 Many peoples had legends of the abhorrent serpentine people that dwelt in caves underneath the earth in the \wylde, said to be degenerate remnants of a race older than men or \scathae. 
 Especially dreaded were their rare and terrible sorcerer-kings (Imperials).
+
+
+
+
+
+
+
+
+
+\subsection{Name}
+\target{Names for Ophidians}
+Their own name for themselves is \caisith (the name is both singular and plural). 
+\quo{\Ophidian} is a name given to them by the mammalian races because of how they emulate snakes. 
+Other names are Serpentines, Serpentine People, Serpent Folk or Serpent Men. 
+
+
+
+
+
+\subsubsection{\QuilJaar}
+Singular \emph{\quiljaar{}}, plural \emph{\quiljaaran{}}, adjective \emph{\quiljaaran{}}. 
 
 
 
@@ -3011,6 +3031,8 @@ After some centuries they slowly learned to accept one another.
 \index{Wyrm}
 Some \ophidians were not powerful enough to become \dragons.
 But they were able to become lesser \dragon{}like creatures called Wyrms. 
+
+See also the section on \hs{Dread Wyrms}.
 
 
 
