--- a/World/Realms.tex
+++ b/World/Realms.tex
@@ -246,6 +246,23 @@ Someone delves deep and finds ancient \voyager{} artifacts, connected to the ori
 
 
 
+\section{Labyrinth}
+See the \hs{Labyrinth} section.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 \section{\Machai}
 \target{Machai}
 \index{\Machai}
@@ -1814,7 +1831,7 @@ The black stars are mentioned in \emph{\hr{Wanderers in Darkness}{\WanderersInDa
 \subsection{Statues of caterpillars and wormsirens}
 \Nyx is full of statues of vast caterpillar-like monsters. It is believed that they are likenesses of the extinct founders and builders of \Nyx, called the Ancient Nyxians. 
 
-It is suspected by some that the wormsirens are degenerate descendants of the caterpillar-like Ancient Nyxians. 
+It is suspected by some that the \hs{wormsirens} are degenerate descendants of the caterpillar-like Ancient Nyxians. 
 
 
 
